--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "matchy",
   "version": "1.0.0",
   "description": "A matching service.",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "express": "^4.17.1"
   },
